<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.googlecode.paradoxdriver</groupId>
  <artifactId>paradoxdriver</artifactId>
  <version>1.4.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Paradox Driver</name>
  <url>https://github.com/leonhad/paradoxdriver</url>
  <description>A Paradox Java Driver (using JDBC 4)</description>
  <licenses>
    <license>
      <name>GNU GPL v3</name>
      <url>http://www.gnu.org/licenses/gpl.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Leonardo Alves da Costa</name>
      <email>leonhad@gmail.com</email>
      <organization>Particular</organization>
      <organizationUrl>https://github.com/leonhad/</organizationUrl>
    </developer>
  </developers>
  <mailingLists>
    <mailingList>
      <name>Discussion List</name>
      <subscribe>paradoxdriver-discuss+subscribe@googlegroups.com</subscribe>
      <unsubscribe>paradoxdriver-discuss+unsubscribe@googlegroups.com</unsubscribe>
      <post>paradoxdriver-discuss@googlegroups.com</post>
      <archive>https://groups.google.com/d/forum/paradoxdriver-discuss</archive>
    </mailingList>
  </mailingLists>
  <scm>
    <connection>scm:git:https://github.com/leonhad/paradoxdriver.git</connection>
    <developerConnection>scm:git:https://github.com/leonhad/paradoxdriver.git</developerConnection>
    <url>https://github.com/leonhad/paradoxdriver.git</url>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/leonhad/paradoxdriver/issues</url>
  </issueManagement>
  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.java.source>1.7</sonar.java.source>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <jacoco.outputDir>${project.build.directory}/</jacoco.outputDir>
    <jacoco.out.ut.file>jacoco.exec</jacoco.out.ut.file>
    <jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
    <sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
    <sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
  </properties>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <quiet>true</quiet>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19.1</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-junit47</artifactId>
            <version>2.19.1</version>
          </dependency>
        </dependencies>
        <configuration>
          <testFailureIgnore>true</testFailureIgnore>
          <argLine>-noverify -Xmx1G -XX:+UseConcMarkSweepGC
            -XX:+CMSClassUnloadingEnabled</argLine>
          <includes>
            <include>**/*.class</include>
          </includes>
          <excludedGroups>com.googlecode.paradox.integration.IntegrationTest</excludedGroups>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.12.4</version>
        <configuration>
          <argLine>-Xmx1G -XX:+UseConcMarkSweepGC
            -XX:+CMSClassUnloadingEnabled ${jacoco.agent.it.arg} 
          </argLine>
          <includes>
            <include>**/*.class</include>
          </includes>
          <groups>com.googlecode.paradox.integration.IntegrationTest</groups>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.7.7.201606060606</version>
        <executions>
          <execution>
            <id>prepare-ut-agent</id>
            <phase>process-test-classes</phase>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <destFile>${sonar.jacoco.reportPath}</destFile>
              <propertyName>jacoco.agent.ut.arg</propertyName>
              <append>true</append>
            </configuration>
          </execution>
          <execution>
            <id>prepare-it-agent</id>
            <phase>package</phase>
            <goals>
              <goal>prepare-agent-integration</goal>
            </goals>
            <configuration>
              <destFile>${sonar.jacoco.itReportPath}</destFile>
              <propertyName>jacoco.agent.it.arg</propertyName>
              <append>true</append>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.2</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>